--- a/deneme1/index1.html
+++ b/deneme1/index1.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>This is exercise 1</title>
     <script> 
-        console.log("Hello Ali World");
+        console.log("Hello World");
 
         function sayHello(){
             alert("Hello")
