--- a/deneme1/index1.html
+++ b/deneme1/index1.html
@@ -4,7 +4,7 @@
         console.log("Hello World");
 
         function sayHello(){
-            alert("Hello")
+            alert("Hello Ali")
         }
     </script>
     </head>
