--- a/deneme1/index1.html
+++ b/deneme1/index1.html
@@ -1,15 +1,26 @@
-<html>
-    <head><title>This is exercise 1</title>
+<!DOCTYPE html>
+<html lang="tr">
+
+
+
+    <head>
+    <meta charset ="UTF-8" >
+    <meta name="viewport" content="with =device-with , initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie-edge"/>
+    <script scr = "js/main.js"> </script>
+    <title>This is exercise 1111</title>
     <script> 
         console.log("Hello World");
 
         function sayHello(){
             alert("Hello Ali")
         }
+
+
     </script>
     </head>
     <body>
-        <h2>This is hello world application.</h2>
+        <h2>This is hello1111 world application.</h2>
         <button onclick="sayHello()">Click Me To Say hello</button>
 </body>
 </html>
